# keycloak-demo

./: Dockerfile  Dockerfile-app  Dockerfile-keycloak  README.md  app.py  docker-compose.yml  ian-cache-ispn.xml  keycloak1-cache-ispn.xml  keycloak2-cache-ispn.xml  local-ian-cache-ispn.xml  nginx.conf  pyproject.toml  realm-config.json  realm-export.json  replicated-cache-ispn.xml  shitty_connection_diagram.txt
flask_app/: Dockerfile
tests/: conftest.py  test_token_protected_route.py
